Fix breaking on smallish screens, like iPhone 6

--- a/css/main.css
+++ b/css/main.css
@@ -292,6 +292,12 @@ div.navbar-fixed-top{
 	}
 }
 
+@media only screen and (min-width: 400px) {
+	.fix-small-screen-breaking{
+		display:none;
+	}
+}
+
 @media only screen and (min-width: 0px) and (max-width: 500px) {
 	.banner_cont .banner .button{
 		display:none;
